--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@orca-so/whirlpools": "^3.0.0",
+    "@orca-so/whirlpools": "^1.0.0",
+    "@orca-so/whirlpools-core": "^1.0.0",
+    "@solana/kit": "^2.1.0",
     "@solana/web3.js": "^1.98.2",
-    "@solana/kit": "^2.3.0",
-    "decimal.js": "^10.4.3"
+    "decimal.js": "^10.4.3",
+    "@project-serum/anchor": "^0.26.0",
+    "@orca-so/whirlpools-client": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
