--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
   "license": "ISC",
   "dependencies": {
     "@orca-so/whirlpools": "^1.0.0",
+    "@orca-so/whirlpools-client": "^1.0.0",
     "@orca-so/whirlpools-core": "^1.0.0",
+    "@project-serum/anchor": "^0.26.0",
     "@solana/kit": "^2.1.0",
     "@solana/web3.js": "^1.98.2",
     "decimal.js": "^10.4.3",
-    "@project-serum/anchor": "^0.26.0",
-    "@orca-so/whirlpools-client": "^1.0.0"
+    "dotenv": "^17.2.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^20.12.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
