--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@project-serum/anchor": "^0.26.0",
     "@solana/kit": "^2.1.0",
     "@solana/web3.js": "^1.98.2",
+    "@solana/spl-token": "^0.4.6",
     "decimal.js": "^10.4.3",
-    "dotenv": "^17.2.0"
+    "dotenv": "^17.2.0",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
